Improve readability, and time fix

--- a/css/index.scss
+++ b/css/index.scss
@@ -4,7 +4,7 @@
 
 @media (max-width: 768px) {
     body {
-        font-size: .7em;
+        font-size: .8em;
         overflow: hidden;
     }
 
@@ -39,7 +39,7 @@
     }
 
     .track {
-        font-size: 1.2em !important;
+        font-size: 1.3em !important;
     }
 
     .delete {
@@ -209,8 +209,18 @@ i {
 }
 
 
-.apple-mobile-web-app .container {
-    padding-top: 4vh !important;
+.apple-mobile-web-app {
+
+    .container {
+        padding-top: 4vh !important;
+    }
+    
+
+    button {
+        margin-top: 4vh !important;
+        width: 25vw !important;
+        transform: scale(1.5) !important;
+    }
 }
 
 .transparent {
